Added FXML, created a UI Launcher class, connected the controller to the launcher and updated the build.gradle.kts